--- a/app/index.html
+++ b/app/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:500,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/libs.min.css">
     <link rel="stylesheet" href="css/style.min.css">
     <title>Document</title>
@@ -12,7 +13,92 @@
 
 <body>
 
-    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Rem, illo sit corrupti eius eveniet voluptatum! Et quas ipsa consequatur natus suscipit iure necessitatibus cum! Architecto aspernatur error reiciendis quos nesciunt.
+    <header class="header">
+        <div class="header__top">
+            <div class="container">
+                <div class="header__top-inner">
+                    <div class="header__logo">
+                        <a href="#">
+                            <img src="img/logo.png" alt="">
+                        </a>
+                    </div>
+                    <div class="header__text">
+                        <a href="#">
+                            <span>Need help?</span>
+                        </a>
+                        Talk to an expert:
+                        <a class="" href="tel:61 3 8376 6284">+61 3 8376 6284</a>
+                    </div>
+                    <div class="header__box">
+                        <a class="basket" href="#"></a>
+                        <a class="header__btn header__btn-login" href="#">Login</a>
+                        <a class="header__btn header__btn-register" href="#">Register</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="header__menu">
+            <div class="container">
+                <nav class="menu">
+                    <ul class="menu-list">
+                        <li>
+                            <a href="#">
+                                Home
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                About
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                WordPress
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                Joomla
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                PSD
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                Plugins
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                Components
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                Pages
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                Contact
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                Help
+                            </a>
+                        </li>
+                    </ul>
+                </nav>
+            </div>
+        </div>
+
+    </header>
+
+
 
 
 
