--- a/app/index.html
+++ b/app/index.html
@@ -98,6 +98,27 @@
 
     </header>
 
+    <section class="search" style="background-image: url(img/search-bg.jpg);">
+        <div class="container">
+            <div class="search__inner">
+                <div class="search__inner-title">
+                    Welcome To Foxtar Market Place!
+                </div>
+                <div class="search__inner-text">
+                    Premium WordPress Themes, Web Templates and Many More ...
+                </div>
+                <div class="search__inner-form">
+                    <form>
+                        <input type="text" placeholder="Search Your Keywords . . ." required>
+                        <button>
+                            <img src="img/icons/search.png" alt="">
+                        </button>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </section>
+
 
 
 
