--- a/app/index.html
+++ b/app/index.html
@@ -119,6 +119,222 @@
         </div>
     </section>
 
+    <section class="products">
+        <div class="container-fluid">
+            <div class="products-title title">
+                Let’s Check Out Our Newest Release Prodcuts
+            </div>
+            <div class="products__inner">
+                <div class="products__inner-btn">
+                    <button type="button" data-filter="all">All</button>
+                    <button type="button" data-filter=".category-wordpress">WordPress</button>
+                    <button type="button" data-filter=".category-joomla">Joomla</button>
+                    <button type="button" data-filter=".category-plugins">Plugins</button>
+                    <button type="button" data-filter=".category-component">Component</button>
+                    <button type="button" data-filter=".category-psd">PSD</button>
+                </div>
+                <div class="products__inner-box">
+                    <div class="products__item mix category-component category-popular">
+                        <a class="products__item-img" href="#" style="background-image: url(img/content/product-item.jpg);"></a>
+                        <div class="products__item-content">
+                            <div class="products__item-name">
+                                <a class="products__item-title" href="#">
+                                    Responsive Mobile APP
+                                </a>
+                                <div class="products__item-category">
+                                    <a href="#">Site Template</a>
+                                </div>
+                            </div>
+                            <div class="products__item-price">
+                                $19
+                            </div>
+                        </div>
+                        <div class="products__item-info">
+                            <a class="products__item-author" href="#">
+                                <div class="avatar" style="background-image: url(img/content/user.jpg);"></div> <span>Radiustheme</span>
+                            </a>
+                            <div class="products__item-star">
+                                (05)
+                            </div>
+                        </div>
+                    </div>
+                    <div class="products__item mix category-wordpress">
+                        <a class="products__item-img" href="#" style="background-image: url(img/content/product-item.jpg);"></a>
+                        <div class="products__item-content">
+                            <div class="products__item-name">
+                                <a class="products__item-title" href="#">
+                                    Responsive Mobile APP
+                                </a>
+                                <div class="products__item-category">
+                                    <a href="#">Site Template</a>
+                                </div>
+                            </div>
+                            <div class="products__item-price">
+                                $19
+                            </div>
+                        </div>
+                        <div class="products__item-info">
+                            <a class="products__item-author" href="#">
+                                <div class="avatar" style="background-image: url(img/content/user.jpg);"></div> <span>Radiustheme</span>
+                            </a>
+                            <div class="products__item-star">
+                                (05)
+                            </div>
+                        </div>
+                    </div>
+                    <div class="products__item mix category-plugins category-popular">
+                        <a class="products__item-img" href="#" style="background-image: url(img/content/product-item.jpg);"></a>
+                        <div class="products__item-content">
+                            <div class="products__item-name">
+                                <a class="products__item-title" href="#">
+                                    Responsive Mobile APP
+                                </a>
+                                <div class="products__item-category">
+                                    <a href="#">Site Template</a>
+                                </div>
+                            </div>
+                            <div class="products__item-price">
+                                $19
+                            </div>
+                        </div>
+                        <div class="products__item-info">
+                            <a class="products__item-author" href="#">
+                                <div class="avatar" style="background-image: url(img/content/user.jpg);"></div> <span>Radiustheme</span>
+                            </a>
+                            <div class="products__item-star">
+                                (05)
+                            </div>
+                        </div>
+                    </div>
+                    <div class="products__item mix category-psd category-new">
+                        <a class="products__item-img" href="#" style="background-image: url(img/content/product-item.jpg);"></a>
+                        <div class="products__item-content">
+                            <div class="products__item-name">
+                                <a class="products__item-title" href="#">
+                                    Responsive Mobile APP
+                                </a>
+                                <div class="products__item-category">
+                                    <a href="#">Site Template</a>
+                                </div>
+                            </div>
+                            <div class="products__item-price">
+                                $19
+                            </div>
+                        </div>
+                        <div class="products__item-info">
+                            <a class="products__item-author" href="#">
+                                <div class="avatar" style="background-image: url(img/content/user.jpg);"></div> <span>Radiustheme</span>
+                            </a>
+                            <div class="products__item-star">
+                                (05)
+                            </div>
+                        </div>
+                    </div>
+                    <div class="products__item mix category-wordpress">
+                        <a class="products__item-img" href="#" style="background-image: url(img/content/product-item.jpg);"></a>
+                        <div class="products__item-content">
+                            <div class="products__item-name">
+                                <a class="products__item-title" href="#">
+                                    Responsive Mobile APP
+                                </a>
+                                <div class="products__item-category">
+                                    <a href="#">Site Template</a>
+                                </div>
+                            </div>
+                            <div class="products__item-price">
+                                $19
+                            </div>
+                        </div>
+                        <div class="products__item-info">
+                            <a class="products__item-author" href="#">
+                                <div class="avatar" style="background-image: url(img/content/user.jpg);"></div> <span>Radiustheme</span>
+                            </a>
+                            <div class="products__item-star">
+                                (05)
+                            </div>
+                        </div>
+                    </div>
+                    <div class="products__item mix category-joomla category-new">
+                        <a class="products__item-img" href="#" style="background-image: url(img/content/product-item.jpg);"></a>
+                        <div class="products__item-content">
+                            <div class="products__item-name">
+                                <a class="products__item-title" href="#">
+                                    Responsive Mobile APP
+                                </a>
+                                <div class="products__item-category">
+                                    <a href="#">Site Template</a>
+                                </div>
+                            </div>
+                            <div class="products__item-price">
+                                $19
+                            </div>
+                        </div>
+                        <div class="products__item-info">
+                            <a class="products__item-author" href="#">
+                                <div class="avatar" style="background-image: url(img/content/user.jpg);"></div> <span>Radiustheme</span>
+                            </a>
+                            <div class="products__item-star">
+                                (05)
+                            </div>
+                        </div>
+                    </div>
+                    <div class="products__item mix category-psd category-popular">
+                        <a class="products__item-img" href="#" style="background-image: url(img/content/product-item.jpg);"></a>
+                        <div class="products__item-content">
+                            <div class="products__item-name">
+                                <a class="products__item-title" href="#">
+                                    Responsive Mobile APP
+                                </a>
+                                <div class="products__item-category">
+                                    <a href="#">Site Template</a>
+                                </div>
+                            </div>
+                            <div class="products__item-price">
+                                $19
+                            </div>
+                        </div>
+                        <div class="products__item-info">
+                            <a class="products__item-author" href="#">
+                                <div class="avatar" style="background-image: url(img/content/user.jpg);"></div> <span>Radiustheme</span>
+                            </a>
+                            <div class="products__item-star">
+                                (05)
+                            </div>
+                        </div>
+                    </div>
+                    <div class="products__item mix category-wordpress category-new">
+                        <a class="products__item-img" href="#" style="background-image: url(img/content/product-item.jpg);"></a>
+                        <div class="products__item-content">
+                            <div class="products__item-name">
+                                <a class="products__item-title" href="#">
+                                    Responsive Mobile APP
+                                </a>
+                                <div class="products__item-category">
+                                    <a href="#">Site Template</a>
+                                </div>
+                            </div>
+                            <div class="products__item-price">
+                                $19
+                            </div>
+                        </div>
+                        <div class="products__item-info">
+                            <a class="products__item-author" href="#">
+                                <div class="avatar" style="background-image: url(img/content/user.jpg);"></div> <span>Radiustheme</span>
+                            </a>
+                            <div class="products__item-star">
+                                (05)
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="products__bottom-btn">
+                <button type="button" data-filter=".category-new">All New Items</button>
+                <button type="button" data-filter=".category-popular">Popular Items</button>
+            </div>
+        </div>
+    </section>
+
 
 
 
@@ -126,7 +342,7 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="js/libs.min.js"></script>
-    <script src="js/main.min.js"></script>
+    <script src="js/main.js"></script>
 </body>
 
 </html>
