--- a/app/index.html
+++ b/app/index.html
@@ -819,12 +819,21 @@
         </div>
     </section>
 
-
-
     <!-- end advantages -->
 
-
     <!-- start products -->
+
+    <swction class="author" style="background-image: url(img/author-bg.jpg);">
+        <div class="author__box">
+            <div class="author__title">
+                Over <span>20,000</span> Author Are Involved Here!
+            </div>
+            <a href="#" class="author__link">
+                Become A Author
+            </a>
+        </div>
+
+    </swction>
     <!-- end products -->
 
 
