--- a/app/index.html
+++ b/app/index.html
@@ -838,6 +838,35 @@
 
 
     <!-- start products -->
+    <section class="tutorial">
+        <div class="container">
+            <div class="tutorial__title title">
+                Free Monthly Tutorials To Help You With Your Project
+            </div>
+            <div class="tutorial__inner">
+                <!-- satrt item  -->
+                <div class="tutorial__item">
+                    <div class="tutorial__item-images" style=" background-image: url(img/content/tutorial-bg.jpg);"></div>
+                    <div class="tutorial__item-title">
+                        Web Design Tutorials
+                    </div>
+                </div>
+                <!-- end item  -->
+                <div class="tutorial__item">
+                    <div class="tutorial__item-images" style=" background-image: url(img/content/tutorial-bg.jpg);"></div>
+                    <div class="tutorial__item-title">
+                        WordPress Tutorials
+                    </div>
+                </div>
+                <div class="tutorial__item">
+                    <div class="tutorial__item-images" style=" background-image: url(img/content/tutorial-bg.jpg);"></div>
+                    <div class="tutorial__item-title">
+                        HTML & CSS Tutorials
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
     <!-- end products -->
 
     <!-- start products -->
