added media for header and footer

--- a/app/index.html
+++ b/app/index.html
@@ -36,7 +36,7 @@
                                 <a class="" href="tel:61383766284">+61 3 8376 6284</a>
                             </div>
                             <div class="header__box">
-                                <div class="notification__box">
+                                <div class="notification__box header__btn-login--off">
                                     <a class="notification header__circle active icon-bell-o" href="#">
                                         <span>8</span>
                                     </a>
@@ -64,7 +64,7 @@
                                         </a>
                                     </div>
                                 </div>
-                                <div class="massage__box">
+                                <div class="massage__box header__btn-login--off">
                                     <a class="massage header__circle active icon-envelope-o" href="#">
                                         <span>5</span>
                                     </a>
@@ -127,7 +127,7 @@
                                     </div>
                                 </div>
                                 <div class="user__box">
-                                    <a class="user" href="#">
+                                    <a class="user header__btn-login--off" href="#">
                                         <div class="user__inner">
                                             <div class="user__images">
                                                 <img src="img/content/user-login.jpg" alt="">
@@ -155,16 +155,22 @@
                                         </ul>
                                     </div>
                                 </div>
-                                <a class="header__btn header__btn-login header__btn-login--off" href="#">Login</a>
-                                <a class="header__btn header__btn-loout header__btn-login--on" href="#">Logout</a>
-                                <a class="header__btn header__btn-register header__btn-login--off" href="#">Register</a>
+                                <a class="header__btn header__btn-login" href="#">Login</a>
+                                <a class="header__btn header__btn-loout header__btn-login--off" href="#">Logout</a>
+                                <a class="header__btn header__btn-register" href="#">Register</a>
                             </div>
+                            <div class="header__btn-menu icon-user"></div>
                         </div>
                     </div>
                 </div>
                 <div class="header__menu">
                     <div class="container">
                         <nav class="menu">
+                            <div class="menu__btn">
+                                <div></div>
+                                <div></div>
+                                <div></div>
+                            </div>
                             <ul class="menu-list">
                                 <li><a href="#">Home</a></li>
                                 <li><a href="#">About</a></li>
@@ -979,11 +985,12 @@
         </div>
 
         <!-- start footer -->
+
         <footer class="footer">
             <div class="footer__content">
                 <div class="container">
                     <div class="footer__inner">
-                        <div class="footer__col">
+                        <div class="footer__col footer__col-address">
                             <div class="footer__col-title">
                                 About Company
                             </div>
@@ -1021,7 +1028,7 @@
                                 <li><a href="#">Contact Us</a></li>
                             </ul>
                         </div>
-                        <div class="footer__col">
+                        <div class="footer__col footer__col-social">
                             <div class="footer__col-title">
                                 Follow Us On
                             </div>
