--- a/app/new-items.html
+++ b/app/new-items.html
@@ -33,19 +33,144 @@
                                     <span>Need help?</span>
                                 </a>
                                 Talk to an expert:
-                                <a class="" href="tel:61 3 8376 6284">+61 3 8376 6284</a>
+                                <a class="" href="tel:61383766284">+61 3 8376 6284</a>
                             </div>
                             <div class="header__box">
-                                <a class="basket" href="#"></a>
-                                <a class="header__btn header__btn-login" href="#">Login</a>
-                                <a class="header__btn header__btn-register" href="#">Register</a>
+                                <div class="notification__box">
+                                    <a class="notification header__circle active icon-bell-o" href="#">
+                                        <span>8</span>
+                                    </a>
+                                    <div class="circle__menu notification__menu">
+                                        <a class="circle__item icon-bell-o icons-color" href="#">
+                                            <img src="img/content/massage.jpg" alt="" class="circle__images">
+                                            <div class="circle__info">
+                                                <div class="circle__info-thema">WordPress</div>
+                                                <div class="circle__info-date">01 Dec, 2016</div>
+                                            </div>
+                                        </a>
+                                        <a class="circle__item icon-bell-o" href="#">
+                                            <img src="img/content/massage.jpg" alt="" class="circle__images">
+                                            <div class="circle__info">
+                                                <div class="circle__info-thema">WordPress</div>
+                                                <div class="circle__info-date">01 Dec, 2016</div>
+                                            </div>
+                                        </a>
+                                        <a class="circle__item icon-bell-o" href="#">
+                                            <img src="img/content/massage.jpg" alt="" class="circle__images">
+                                            <div class="circle__info">
+                                                <div class="circle__info-thema">WordPress</div>
+                                                <div class="circle__info-date">01 Dec, 2016</div>
+                                            </div>
+                                        </a>
+                                    </div>
+                                </div>
+                                <div class="massage__box">
+                                    <a class="massage header__circle active icon-envelope-o" href="#">
+                                        <span>5</span>
+                                    </a>
+                                    <div class="circle__menu massage__menu">
+                                        <a class="circle__item icon-envelope-o icons-color" href="#">
+                                            <img src="img/content/massage.jpg" alt="" class="circle__images">
+                                            <div class="circle__info">
+                                                <div class="circle__info-name">Kazi Fahim</div>
+                                                <div class="circle__info-thema">WordPress</div>
+                                                <div class="circle__info-date">01 Dec, 2016</div>
+                                            </div>
+                                        </a>
+                                        <a class="circle__item icon-envelope-o" href="#">
+                                            <img src="img/content/massage.jpg" alt="" class="circle__images">
+                                            <div class="circle__info">
+                                                <div class="circle__info-name">Kazi Fahim</div>
+                                                <div class="circle__info-thema">WordPress</div>
+                                                <div class="circle__info-date">01 Dec, 2016</div>
+                                            </div>
+                                        </a>
+                                        <a class="circle__item icon-mail-reply" href="#">
+                                            <img src="img/content/massage.jpg" alt="" class="circle__images">
+                                            <div class="circle__info">
+                                                <div class="circle__info-name">Kazi Fahim</div>
+                                                <div class="circle__info-thema">WordPress</div>
+                                                <div class="circle__info-date">01 Dec, 2016</div>
+                                            </div>
+                                        </a>
+                                    </div>
+                                </div>
+                                <div class="basket__box">
+                                    <a class="basket header__circle active icon-shopping-cart" href="#">
+                                        <span>8</span>
+                                    </a>
+                                    <div class="circle__menu">
+                                        <div class="circle__item">
+                                            <img src="img/content/basket.png" alt="" class="circle__images">
+                                            <div class="circle__info">
+                                                <a class="circle__info-name" href="#">Grand Ballet</a>
+                                                <div class="circle__info-thema">WordPress</div>
+                                                <div class="circle__info-price">$59</div>
+                                            </div>
+                                        </div>
+                                        <div class="circle__item">
+                                            <img src="img/content/basket.png" alt="" class="circle__images">
+                                            <div class="circle__info">
+                                                <a class="circle__info-name" href="#">Grand Ballet</a>
+                                                <div class="circle__info-thema">WordPress</div>
+                                                <div class="circle__info-price">$59</div>
+                                            </div>
+                                        </div>
+                                        <div class="basket__summ">
+                                            <div class="basket__title">
+                                                <div class="basket__summ-total">Total</div>
+                                                <div class="basket__summ-price">$118</div>
+                                            </div>
+                                            <a class="basket__btn" href="#">Go to Cart</a>
+                                            <a class="basket__btn basket__btn-checkout" href="#">Go to Checkout</a>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="user__box">
+                                    <a class="user" href="#">
+                                        <div class="user__inner">
+                                            <div class="user__images">
+                                                <img src="img/content/user-login.jpg" alt="">
+                                            </div>
+                                            <div class="user__info">
+                                                <div class="user__name">
+                                                    Mike Hussy
+                                                </div>
+                                                <div class="user__money">
+                                                    $171.00
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </a>
+                                    <div class="user__menu">
+                                        <ul>
+                                            <li><a class="angle-right" href="#">Portfolio</a></li>
+                                            <li><a class="angle-right" href="#">Profile Page</a></li>
+                                            <li><a class="angle-right" href="#">Account Setting</a></li>
+                                            <li><a class="angle-right" href="#">Downloads</a></li>
+                                            <li><a class="angle-right" href="#">Wishlist</a></li>
+                                            <li><a class="angle-right" href="#">Upload Item</a></li>
+                                            <li><a class="angle-right" href="#">Statement</a></li>
+                                            <li><a class="angle-right" href="#">Withdraws</a></li>
+                                        </ul>
+                                    </div>
+                                </div>
+                                <a class="header__btn header__btn-login header__btn-login--off" href="#">Login</a>
+                                <a class="header__btn header__btn-loout header__btn-login--on" href="#">Logout</a>
+                                <a class="header__btn header__btn-register header__btn-login--off" href="#">Register</a>
                             </div>
+                            <div class="header__btn-menu icon-user"></div>
                         </div>
                     </div>
                 </div>
                 <div class="header__menu">
                     <div class="container">
                         <nav class="menu">
+                            <div class="menu__btn">
+                                <div></div>
+                                <div></div>
+                                <div></div>
+                            </div>
                             <ul class="menu-list">
                                 <li><a href="#">Home</a></li>
                                 <li><a href="#">About</a></li>
@@ -180,9 +305,7 @@
                                         <a class="products__item-img" href="#" style="background-image: url(img/content/product-item.jpg);"></a>
                                         <div class="products__item-content">
                                             <div class="products__item-name">
-                                                <a class="products__item-title" href="#">
-                                            Mobile APP
-                                        </a>
+                                                <a class="products__item-title" href="#">Mobile APP</a>
                                                 <div class="products__item-category">
                                                     <a href="#">Site Template</a>
                                                 </div>
@@ -206,9 +329,7 @@
                                         <a class="products__item-img" href="#" style="background-image: url(img/content/product-item.jpg);"></a>
                                         <div class="products__item-content">
                                             <div class="products__item-name">
-                                                <a class="products__item-title" href="#">
-                                            Mobile APP
-                                        </a>
+                                                <a class="products__item-title" href="#">Mobile APP</a>
                                                 <div class="products__item-category">
                                                     <a href="#">Site Template</a>
                                                 </div>
@@ -679,13 +800,9 @@
                                 </div>
                                 <!-- end products__item -->
 
-
-
-
-
-
                             </div>
 
+                            <!-- end pagination -->
                             <div class="pagination">
                                 <ul class="pagination__list">
                                     <li><a class="active" href="#">1</a></li>
@@ -694,6 +811,7 @@
                                     <li><a href="#">4</a></li>
                                 </ul>
                             </div>
+                            <!-- end pagination -->
 
                         </div>
                     </div>
@@ -710,7 +828,7 @@
             <div class="footer__content">
                 <div class="container">
                     <div class="footer__inner">
-                        <div class="footer__col">
+                        <div class="footer__col footer__col-address">
                             <div class="footer__col-title">
                                 About Company
                             </div>
@@ -748,7 +866,7 @@
                                 <li><a href="#">Contact Us</a></li>
                             </ul>
                         </div>
-                        <div class="footer__col">
+                        <div class="footer__col footer__col-social">
                             <div class="footer__col-title">
                                 Follow Us On
                             </div>
