added pfofile page

--- a/app/settings.html
+++ b/app/settings.html
@@ -230,7 +230,7 @@
             <!-- end breadcrumbs -->
 
             <!-- start settings  -->
-            <div class="settings">
+            <section class="settings">
                 <div class="container">
                     <div class="product-one__tabs settings__tabs">
                         <div class="tabs">
@@ -496,7 +496,7 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </section>
             <!-- end settings  -->
 
         </div>
