added withdrawals page

--- a/app/upload.html
+++ b/app/upload.html
@@ -255,11 +255,11 @@
                                 </div>
                                 <div class="upload__line">
                                     <label>Upload Main File <span>*</span></label>
-                                    <input type="file" required data-placeholder="No File Choosen" data-browse="Choose File">
+                                    <input type="file" required data-placeholder="No File Choosen" data-browse="Choose File" title="Choose File">
                                 </div>
                                 <div class="upload__line">
                                     <label>Upload Screenshots <span>*</span></label>
-                                    <input type="file" required data-placeholder="No File Choosen" data-browse="Choose File">
+                                    <input type="file" required data-placeholder="No File Choosen" data-browse="Choose File" title="Choose File">
                                 </div>
                                 <div class="upload__line">
                                     <label>File Included <span>*</span></label>
