--- a/app/withdrawals.html
+++ b/app/withdrawals.html
@@ -7,10 +7,9 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,500,700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Raleway:700&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/libs.min.css">
     <link rel="stylesheet" href="css/style.min.css">
-    <title>contacts.html</title>
+    <title>withdrawals.html</title>
 </head>
 
 <body>
@@ -220,72 +219,113 @@
                     <div class="breadcrumbs__inner">
                         <ul class="breadcrumbs__list">
                             <li><a href="#">Home</a></li>
-                            <li><span>Contact Us</span></li>
+                            <li><span>Withdrawals</span></li>
                         </ul>
                     </div>
                 </div>
             </div>
 
-
             <!-- end breadcrumbs -->
 
 
-            <!-- start about page -->
-
-            <section class="contact">
+            <!-- start withdrawals -->
+            <section class="withdrawals">
                 <div class="container">
-                    <div class="contact__wrapper">
-                        <div class="contact__head">
-                            Contact With Us
-                        </div>
-                        <div class="contact__inner">
-                            <div class="contact__map">
-                                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d50420.93061420932!2d144.94306110584353!3d-37.82967095137873!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6ad65d4cee0cec83%3A0xd019c5f69915a4a0!2zQ29sbGlucyBTdCwgTWVsYm91cm5lIFZJQywg0JDQstGB0YLRgNCw0LvQuNGP!5e0!3m2!1sru!2sua!4v1582547796686!5m2!1sru!2sua"
-                                    frameborder="0" style="border:0;" allowfullscreen=""></iframe>
-                            </div>
-                            <div class="contact__box">
-                                <div class="contact__info">
-
-                                    <div class="contact__info-item">
-                                        <div class="contact__info-title icon-map-marker">Our Office Address</div>
-                                        <div class="contact__info-content">
-                                            PO Box 16122 Collins Street West Victoria 8007 Australia
-                                        </div>
-                                    </div>
-
-                                    <div class="contact__info-item">
-                                        <div class="contact__info-title icon-phone">Phone</div>
-                                        <a href="tel:61383766284" class="contact__info-content">
-                                            +61 3 8376 6284
-                                        </a>
-                                    </div>
-
-                                    <div class="contact__info-item">
-                                        <div class="contact__info-title icon-envelope-o">E-mail</div>
-                                        <div class="contact__info-content">
-                                            info@foxtar.com
-                                        </div>
-                                    </div>
-
-                                </div>
-                                <div class="contact__form">
-                                    <div class="contact__form-title">Drop Us A Message </div>
+                    <div class="withdrawals__inner">
+                        <div class="withdrawals__col">
+                            <div class="withdrawals__box">
+                                <div class="withdrawals__title">Withdrawals Earnings</div>
+                                <div class="withdrawals__content">
                                     <form>
-                                        <div class="contact__form-row">
-                                            <input type="text" placeholder="Name*" required>
-                                            <input type="text" placeholder="E-mail*" required>
+                                        <div class="withdrawals__form-line">
+                                            <label>Amount to Withdraw ($2000.00 Maximum) <span>*</span></label>
+                                            <input type="text" placeholder="Select Your Card" required>
                                         </div>
-                                        <textarea placeholder="Message*" required></textarea>
-                                        <button type="submit">Send Message</button>
+                                        <div class="withdrawals__form-line">
+                                            <label>Choose your Withdraw Method <span>*</span></label>
+                                            <select>
+                                                <option>Select Your Card</option>
+                                                <option>Select Your Card</option>
+                                            </select>
+                                        </div>
+                                        <div class="withdrawals__form-line">
+                                            <label>Your Account Name <span>*</span></label>
+                                            <select>
+                                                <option>Select Your Card</option>
+                                                <option>Select Your Card</option>
+                                            </select>
+                                        </div>
+                                        <div class="withdrawals__form-line">
+                                            <label>Confirm Your Password <span>*</span></label>
+                                            <input type="text" placeholder="Select Your Card" required>
+                                        </div>
+                                        <button type="submit">Request Withdrawal</button>
                                     </form>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="withdrawals__col">
+                            <div class="withdrawals__box">
+                                <div class="withdrawals__title">Withdrawal History</div>
+                                <div class="withdrawals__content">
+                                    <div class="withdrawals__content-items">
+
+                                        <div class="withdrawals__content-item">
+                                            <div class="withdrawals__content-date">Dec 26th, 2016</div>
+                                            <div class="withdrawals__content-email">Psdboss@paypal.com</div>
+                                            <div class="withdrawals__content-price">$200</div>
+                                            <div class=" withdrawals__content-status">Pending</div>
+                                        </div>
+
+                                        <div class="withdrawals__content-item">
+                                            <div class="withdrawals__content-date">Dec 26th, 2016</div>
+                                            <div class="withdrawals__content-email">Psdboss@paypal.com</div>
+                                            <div class="withdrawals__content-price">$200</div>
+                                            <div class="withdrawals__content-status withdrawals__content-paid">Paid</div>
+                                        </div>
+
+                                        <div class="withdrawals__content-item">
+                                            <div class="withdrawals__content-date">Dec 26th, 2016</div>
+                                            <div class="withdrawals__content-email">Psdboss@paypal.com</div>
+                                            <div class="withdrawals__content-price">$200</div>
+                                            <div class="withdrawals__content-status withdrawals__content-paid">Paid</div>
+                                        </div>
+
+                                        <div class="withdrawals__content-item">
+                                            <div class="withdrawals__content-date">Dec 26th, 2016</div>
+                                            <div class="withdrawals__content-email">Psdboss@paypal.com</div>
+                                            <div class="withdrawals__content-price">$200</div>
+                                            <div class=" withdrawals__content-status withdrawals__content-paid">Paid</div>
+                                        </div>
+
+                                        <div class="withdrawals__content-item">
+                                            <div class="withdrawals__content-date">Dec 26th, 2016</div>
+                                            <div class="withdrawals__content-email">Psdboss@paypal.com</div>
+                                            <div class="withdrawals__content-price">$200</div>
+                                            <div class="withdrawals__content-status withdrawals__content-paid">Paid</div>
+                                        </div>
+
+                                        <div class="withdrawals__content-item">
+                                            <div class="withdrawals__content-date">Dec 26th, 2016</div>
+                                            <div class="withdrawals__content-email">Psdboss@paypal.com</div>
+                                            <div class="withdrawals__content-price">$200</div>
+                                            <div class="withdrawals__content-status withdrawals__content-paid">Paid</div>
+                                        </div>
+
+                                        <div class="withdrawals__content-item">
+                                            <div class="withdrawals__content-date">Dec 26th, 2016</div>
+                                            <div class="withdrawals__content-email">Psdboss@paypal.com</div>
+                                            <div class="withdrawals__content-price">$200</div>
+                                            <div class="withdrawals__content-status withdrawals__content-paid">Paid</div>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
             </section>
-
-            <!-- end about page -->
+            <!-- end withdrawals -->
 
 
         </div>
