--- a/app/product-one.html
+++ b/app/product-one.html
@@ -394,9 +394,9 @@
                                 <div class="price__box">
                                     <div class="price__product">$59.00</div>
                                     <form>
-                                        <select id="">
-                                            <option>regular</option>
-                                            <option>premium</option>
+                                        <select>
+                                            <option>Regular</option>
+                                            <option>Premium</option>
                                         </select>
                                     </form>
                                 </div>
