--- a/app/profile.html
+++ b/app/profile.html
@@ -281,7 +281,7 @@
                         </div>
                         <div class="profile__content">
                             <div class="profile__banner">
-                                <div class="profile__baaer-img" style="background-image: url(img/content/banner.jpg);">
+                                <div class="profile__baner-img" style="background-image: url(img/content/banner.jpg);">
                                 </div>
                             </div>
                             <div class="profile__items">
